Bezig aan de website vooral aan html momenteel.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,99 @@
     <title>Webshop OffRoad</title>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body>
+<header>
+    <div class="promo">
+        <p>Gratis verzending vanaf 75,-</p>
+        <p>Voor 23u59 bestellen, de volgende dag in huis *</p>
+        <p>Gratis retourneren</p>
+    </div>
+    <nav>
+        <h2>OFFROAD </h2>
 
+        <span class="material-symbols-outlined">
+            pedal_bike
+        </span>
+        <span class="material-symbols-outlined">
+        person
+        </span>
+        <span class="material-symbols-outlined">
+        favorite
+        </span>
+        <span class="material-symbols-outlined">
+        shopping_cart
+        </span>
+    </nav>
+    <div class="Title">
+
+        <h1>
+            // GO _ OFFROAD //
+        </h1>
+        <h3>
+            // BIKES // PARTS // SERVICES //
+        </h3>
+        <img src="assets/road.jpg" height="483" width="1920" alt="afbeelding-straat"/></div>
+</header>
+<main>
+    <article id="new-bikes">
+        <h2>// NEW IN //</h2>
+        <section>
+            <img src="assets/fiets1.png" height="270" width="400" alt="bike-1"/>
+            <div>
+                <h3>
+                    LANAO 27.5
+                </h3>
+                <p>
+                    Dé beste hardtail beginners-mountainbike voor vrouwen op de markt. Deze mountainbike is veilig, wendbaar en speels op de weg dankzij de lage bovenbuis en de 27.5" wielen. Een echte eyecatcher verkrijgbaar in diverse kleuren en met verschillende opties.
+                </p>
+                <ul>
+                    <li>
+                        LANAO AL
+                    </li>
+                    <li>
+                        Rock Shox Judy TK R 100MM
+                    </li>
+                    <li>
+                        Shimano Deore RD-M1600 12-S
+                    </li>
+
+                </ul>
+
+            </div>
+
+        </section>
+        <section>
+            <img src="assets/fiets1.png" height="270" width="400" alt="bike-1"/>
+            <div>
+                <h3 class="bike-name">
+                    LANAO 27.5
+                </h3>
+                <p>
+                    Dé beste hardtail beginners-mountainbike voor vrouwen op de markt. Deze mountainbike is veilig, wendbaar en speels op de weg dankzij de lage bovenbuis en de 27.5" wielen. Een echte eyecatcher verkrijgbaar in diverse kleuren en met verschillende opties.
+                </p>
+                <ul>
+                    <li>
+                        LANAO AL
+                    </li>
+                    <li>
+                        Rock Shox Judy TK R 100MM
+                    </li>
+                    <li>
+                        Shimano Deore RD-M1600 12-S
+                    </li>
+
+                </ul>
+
+            </div>
+
+        </section>
+
+    </article>
+
+</main>
 </body>
 </html>
