Bezig aan de website vooral aan html momenteel.

--- a/index.html
+++ b/index.html
@@ -48,31 +48,6 @@
         <section>
             <img src="assets/fiets1.png" height="270" width="400" alt="bike-1"/>
             <div>
-                <h3>
-                    LANAO 27.5
-                </h3>
-                <p>
-                    Dé beste hardtail beginners-mountainbike voor vrouwen op de markt. Deze mountainbike is veilig, wendbaar en speels op de weg dankzij de lage bovenbuis en de 27.5" wielen. Een echte eyecatcher verkrijgbaar in diverse kleuren en met verschillende opties.
-                </p>
-                <ul>
-                    <li>
-                        LANAO AL
-                    </li>
-                    <li>
-                        Rock Shox Judy TK R 100MM
-                    </li>
-                    <li>
-                        Shimano Deore RD-M1600 12-S
-                    </li>
-
-                </ul>
-
-            </div>
-
-        </section>
-        <section>
-            <img src="assets/fiets1.png" height="270" width="400" alt="bike-1"/>
-            <div>
                 <h3 class="bike-name">
                     LANAO 27.5
                 </h3>
@@ -95,6 +70,53 @@
             </div>
 
         </section>
+        <section>
+            <div>
+                <h3 class="bike-name">
+                    KATO 29
+                </h3>
+                <p>
+                    De KATO is een snelle, wendbare hardtail mountainbike die de bergen efficiënt opklimt. Het frame is volledig opnieuw ontworpen met interne bekabeling en een fris design. Slechts één ding is hetzelfde gebleven; de fun om ermee te rijden!
+                </p>
+                <ul>
+                    <li>
+                        KATO AL
+                    </li>
+                    <li>
+                        SR SUNTOUR XCR RL AIR 100MM
+                    </li>
+                    <li>
+                        Shimano Deore RD-M4120 10-S
+                    </li>
+                </ul>
+                <img src="assets/fiets2.png" height="270" width="400" alt="bike-2"/>
+            </div>
+
+        </section>
+
+    </article>
+
+    <article id="sales-bikes">
+
+        <section>
+            <img src="assets/fiets3.png" height="270" width="400" alt="bike-3"/>
+            <h3 class="bike-name">
+                NIRVANA TOUR
+            </h3>
+        </section>
+        <section>
+            <img src="assets/fiets4.png" height="270" width="400" alt="bike-4"/>
+            <h3 class="bike-name">
+                LECTOR
+            </h3>
+        </section>
+        <section>
+            <img src="assets/fiets5.png" height="270" width="400" alt="bike-5"/>
+            <h3 class="bike-name">
+                LECTOR SF
+            </h3>
+        </section>
+
 
     </article>
 
