--- a/index.html
+++ b/index.html
@@ -116,6 +116,25 @@
                 LECTOR SF
             </h3>
         </section>
+        <footer>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2514.2382636010575!2d5.344780977102382!3d50.93780655215337!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c1217a07f78ae7%3A0xf11010a945af0f77!2sPXL%20A-Blok%20(Elfde-Linie)%2C%20Elfde-Liniestraat%2024%2C%203500%20Hasselt!5e0!3m2!1sen!2sbe!4v1700320052515!5m2!1sen!2sbe"
+                    width="400" height="300"
+                    style="border:0;" allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+            <div>
+                <h2>
+                    OFFROAD BIKE SHOP
+                </h2>
+                <p>Elfde-Liniestraat 24</p>
+                <p>3500 HASSELT</p>
+                <p>BELGIË</p>
+                <p>0452 / 63 51 42</p>
+                <p>011 / 32 65 87</p>
+                <p>info@offroad-bikes.be</p>
+            </div>
+        </footer>
 
 
     </article>
