begonnen met css

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body>
 <header>
     <div class="promo">
-        <p>Gratis verzending vanaf 75,-</p>
-        <p>Voor 23u59 bestellen, de volgende dag in huis *</p>
-        <p>Gratis retourneren</p>
+        <h6>Gratis verzending vanaf 75,-</h6>
+        <h6>Voor 23u59 bestellen, de volgende dag in huis *</h6>
+        <h6>Gratis retourneren</h6>
     </div>
     <nav>
         <h2>OFFROAD </h2>
 
-        <span class="material-symbols-outlined">
+        <span class="material-symbols-outlined" id="bike">
             pedal_bike
         </span>
         <span class="material-symbols-outlined">
