--- a/index.html
+++ b/index.html
@@ -13,32 +13,40 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body>
-<header>
-    <div id="promo">
+
+    <div class="container width" id="promo">
+
         <h6>Gratis verzending vanaf 75,-</h6>
         <h6>Voor 23u59 bestellen, de volgende dag in huis *</h6>
         <h6>Gratis retourneren</h6>
     </div>
     <nav>
-        <h2 id="offroad" >OFFROAD </h2>
-        <span class="material-symbols-outlined" id="bike">
+        <div class="container">
+            <h2 id="offroad" >OFFROAD </h2>
+            <span class="material-symbols-outlined" id="bike">
             pedal_bike
         </span>
 
 
-        <div id="symbols-nav">
+            <div id="symbols-nav">
                    <span class="material-symbols-outlined">
         person
         </span>
-            <span class="material-symbols-outlined">
+                <span class="material-symbols-outlined">
         favorite
         </span>
-            <span class="material-symbols-outlined">
+                <span class="material-symbols-outlined">
         shopping_cart
         </span>
+            </div>
         </div>
 
+
+
+
     </nav>
+
+    <header>
     <div class="Title">
         <img id="background" src="assets/road.jpg" height="483" width="1920" alt="afbeelding-straat"/>
         <h1 id="Title-text1">
@@ -125,7 +133,7 @@
             </h3>
         </section>
 
-
+    </article>
         <footer>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2514.2382636010575!2d5.344780977102382!3d50.93780655215337!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c1217a07f78ae7%3A0xf11010a945af0f77!2sPXL%20A-Blok%20(Elfde-Linie)%2C%20Elfde-Liniestraat%2024%2C%203500%20Hasselt!5e0!3m2!1sen!2sbe!4v1700320052515!5m2!1sen!2sbe"
                     width="400" height="300"
@@ -145,9 +153,6 @@
                 <p>info@offroad-bikes.be</p>
             </div>
         </footer>
-
-
-    </article>
 
 </main>
 </body>
