nog bezig met css

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="nl"&>
 <head>
     <meta charset="UTF-8">
     <title>Webshop OffRoad</title>
@@ -22,10 +22,13 @@
     </div>
     <nav>
         <div class="container">
-            <h2 id="offroad" >OFFROAD </h2>
-            <span class="material-symbols-outlined" id="bike">
+
+                <h2 id="offroad" >OFFROAD </h2>
+                <span class="material-symbols-outlined" id="bike">
             pedal_bike
         </span>
+
+
 
 
             <div id="symbols-nav">
@@ -58,59 +61,64 @@
         </div>
 </header>
 <main>
-    <h2>// NEW IN //</h2>
-    <article id="new-bikes">
+    <div class="container">
+        <h2>// NEW IN //</h2>
 
-        <section id="section-kato">
-            <img id="lanao" src="assets/fiets1.png" height="270" width="400" alt="bike-1"/>
-            <div>
-                <h3 class="bike-name">
-                    LANAO 27.5
-                </h3>
-                <p>
-                    Dé beste hardtail beginners-mountainbike voor vrouwen op de markt. Deze mountainbike is veilig, wendbaar en speels op de weg dankzij de lage bovenbuis en de 27.5" wielen. Een echte eyecatcher verkrijgbaar in diverse kleuren en met verschillende opties.
-                </p>
-                <ul>
-                    <li>
-                        LANAO AL
-                    </li>
-                    <li>
-                        Rock Shox Judy TK R 100MM
-                    </li>
-                    <li>
-                        Shimano Deore RD-M1600 12-S
-                    </li>
+        <article id="new-bikes">
 
-                </ul>
+            <section id="section-kato">
+                <img id="lanao" src="assets/fiets1.png" height="270" width="400" alt="bike-1"/>
+                <div>
+                    <h3 class="bike-name">
+                        LANAO 27.5
+                    </h3>
+                    <p>
+                        Dé beste hardtail beginners-mountainbike voor vrouwen op de markt. Deze mountainbike is veilig, wendbaar en speels op de weg dankzij de lage bovenbuis en de 27.5" wielen. Een echte eyecatcher verkrijgbaar in diverse kleuren en met verschillende opties.
+                    </p>
+                    <ul>
+                        <li>
+                            LANAO AL
+                        </li>
+                        <li>
+                            Rock Shox Judy TK R 100MM
+                        </li>
+                        <li>
+                            Shimano Deore RD-M1600 12-S
+                        </li>
 
-            </div>
+                    </ul>
 
-        </section>
-        <section>
-            <div>
-                <h3 class="bike-name">
-                    KATO 29
-                </h3>
-                <p>
-                    De KATO is een snelle, wendbare hardtail mountainbike die de bergen efficiënt opklimt. Het frame is volledig opnieuw ontworpen met interne bekabeling en een fris design. Slechts één ding is hetzelfde gebleven; de fun om ermee te rijden!
-                </p>
-                <ul>
-                    <li>
-                        KATO AL
-                    </li>
-                    <li>
-                        SR SUNTOUR XCR RL AIR 100MM
-                    </li>
-                    <li>
-                        Shimano Deore RD-M4120 10-S
-                    </li>
-                </ul>
-                <img src="assets/fiets2.png" height="270" width="400" alt="bike-2"/>
-            </div>
+                </div>
 
-        </section>
+            </section>
+            <section>
+                <div>
+                    <h3 class="bike-name">
+                        KATO 29
+                    </h3>
+                    <p>
+                        De KATO is een snelle, wendbare hardtail mountainbike die de bergen efficiënt opklimt. Het frame is volledig opnieuw ontworpen met interne bekabeling en een fris design. Slechts één ding is hetzelfde gebleven; de fun om ermee te rijden!
+                    </p>
+                    <ul>
+                        <li>
+                            KATO AL
+                        </li>
+                        <li>
+                            SR SUNTOUR XCR RL AIR 100MM
+                        </li>
+                        <li>
+                            Shimano Deore RD-M4120 10-S
+                        </li>
+                    </ul>
+                    <img src="assets/fiets2.png" height="270" width="400" alt="bike-2"/>
+                </div>
 
-    </article>
+            </section>
+        </article>
+
+
+
+
     <h2>// SALES + OUTLET //</h2>
     <article id="sales-bikes">
 
@@ -132,9 +140,12 @@
                 LECTOR SF
             </h3>
         </section>
-
     </article>
+    </div>
+</main>
+
         <footer>
+            <div class="container">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2514.2382636010575!2d5.344780977102382!3d50.93780655215337!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c1217a07f78ae7%3A0xf11010a945af0f77!2sPXL%20A-Blok%20(Elfde-Linie)%2C%20Elfde-Liniestraat%2024%2C%203500%20Hasselt!5e0!3m2!1sen!2sbe!4v1700320052515!5m2!1sen!2sbe"
                     width="400" height="300"
                     style="border:0;" allowfullscreen=""
@@ -142,7 +153,7 @@
                     referrerpolicy="no-referrer-when-downgrade">
             </iframe>
             <div>
-                <h2>
+                <h2 id="red">
                     OFFROAD BIKE SHOP
                 </h2>
                 <p>Elfde-Liniestraat 24</p>
@@ -152,8 +163,9 @@
                 <p>011 / 32 65 87</p>
                 <p>info@offroad-bikes.be</p>
             </div>
+        </div>
         </footer>
 
-</main>
+
 </body>
 </html>
