zo goed als klaar met oef

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="nl"&>
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <title>Webshop OffRoad</title>
@@ -29,9 +29,6 @@
         </span>
 
 
-
-
-            <div id="symbols-nav">
                    <span class="material-symbols-outlined">
         person
         </span>
@@ -41,7 +38,7 @@
                 <span class="material-symbols-outlined">
         shopping_cart
         </span>
-            </div>
+
         </div>
 
 
@@ -115,10 +112,10 @@
 
             </section>
         </article>
+    </div>
 
 
-
-
+    <div class="container">
     <h2>// SALES + OUTLET //</h2>
     <article id="sales-bikes">
 
@@ -141,7 +138,7 @@
             </h3>
         </section>
     </article>
-    </div>
+</div>
 </main>
 
         <footer>
