Klaar met dekstop versie

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <title>Webshop OffRoad</title>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Roboto:wght@100&display=swap" rel="stylesheet">
 
 
@@ -14,155 +13,127 @@
 </head>
 <body>
 
-    <div class="container width" id="promo">
-
-        <h6>Gratis verzending vanaf 75,-</h6>
-        <h6>Voor 23u59 bestellen, de volgende dag in huis *</h6>
-        <h6>Gratis retourneren</h6>
+<div class="dilivery__container" id="go-top">
+    <p><b>Gratis</b> verzending vanaf 75,-</p>
+    <p>Voor 23u59 bestellen, de volgende dag in huis *</p>
+    <p><b>Gratis</b> retourneren</p>
+</div>
+<nav>
+    <div class="nav__container">
+        <h1>OFFROAD <span class="material-symbols-outlined" >pedal_bike</span></h1>
+        <ul>
+            <li><a href="#"> <span class="material-symbols-outlined">person</span></a></li>
+            <li><a href="#"><span class="material-symbols-outlined">favorite</span></a></li>
+            <li><a href="#"><span class="material-symbols-outlined">shopping_cart</span></a> </li>
+        </ul>
     </div>
-    <nav>
-        <div class="container">
+</nav>
 
-                <h2 id="offroad" >OFFROAD </h2>
-                <span class="material-symbols-outlined" id="bike">
-            pedal_bike
-        </span>
+<header>
+    <div class="header__container">
+        <h1> // GO _ OFFROAD //</h1>
 
-
-                   <span class="material-symbols-outlined">
-        person
-        </span>
-                <span class="material-symbols-outlined">
-        favorite
-        </span>
-                <span class="material-symbols-outlined">
-        shopping_cart
-        </span>
-
-        </div>
-
-
-
-
-    </nav>
-
-    <header>
-    <div class="Title">
-        <img id="background" src="assets/road.jpg" height="483" width="1920" alt="afbeelding-straat"/>
-        <h1 id="Title-text1">
-            // GO _ OFFROAD //
-        </h1>
-        <h3 id="Title-text2">
-            // BIKES // PARTS // SERVICES //
-        </h3>
-        </div>
+        <h2>// BIKES // PARTS // SERVICES //</h2>
+    </div>
 </header>
 <main>
-    <div class="container">
-        <h2>// NEW IN //</h2>
+    <section class="main__section-new--container">
+        <h1>// NEW IN //</h1>
+        <article>
+            <img id="lanao" src="assets/fiets1.png" height="270" width="400" alt="bike-1"/>
+            <div>
+                <h2>
+                    LANAO 27.5
+                </h2>
+                <p>
+                    Dé beste hardtail beginners-mountainbike voor vrouwen op de markt. Deze mountainbike is veilig, wendbaar en speels op de weg dankzij de lage bovenbuis en de 27.5" wielen. Een echte eyecatcher verkrijgbaar in diverse kleuren en met verschillende opties.
+                </p>
+                <ul>
+                    <li>
+                        LANAO AL
+                    </li>
+                    <li>
+                        Rock Shox Judy TK R 100MM
+                    </li>
+                    <li>
+                        Shimano Deore RD-M1600 12-S
+                    </li>
 
-        <article id="new-bikes">
+                </ul>
 
-            <section id="section-kato">
-                <img id="lanao" src="assets/fiets1.png" height="270" width="400" alt="bike-1"/>
-                <div>
-                    <h3 class="bike-name">
-                        LANAO 27.5
-                    </h3>
-                    <p>
-                        Dé beste hardtail beginners-mountainbike voor vrouwen op de markt. Deze mountainbike is veilig, wendbaar en speels op de weg dankzij de lage bovenbuis en de 27.5" wielen. Een echte eyecatcher verkrijgbaar in diverse kleuren en met verschillende opties.
-                    </p>
-                    <ul>
-                        <li>
-                            LANAO AL
-                        </li>
-                        <li>
-                            Rock Shox Judy TK R 100MM
-                        </li>
-                        <li>
-                            Shimano Deore RD-M1600 12-S
-                        </li>
-
-                    </ul>
-
-                </div>
-
-            </section>
-            <section>
-                <div>
-                    <h3 class="bike-name">
-                        KATO 29
-                    </h3>
-                    <p>
-                        De KATO is een snelle, wendbare hardtail mountainbike die de bergen efficiënt opklimt. Het frame is volledig opnieuw ontworpen met interne bekabeling en een fris design. Slechts één ding is hetzelfde gebleven; de fun om ermee te rijden!
-                    </p>
-                    <ul>
-                        <li>
-                            KATO AL
-                        </li>
-                        <li>
-                            SR SUNTOUR XCR RL AIR 100MM
-                        </li>
-                        <li>
-                            Shimano Deore RD-M4120 10-S
-                        </li>
-                    </ul>
-                    <img src="assets/fiets2.png" height="270" width="400" alt="bike-2"/>
-                </div>
-
-            </section>
+            </div>
         </article>
-    </div>
 
+        <article>
+            <div>
+                <h2>
+                    KATO 29
+                </h2>
+                <p>
+                    De KATO is een snelle, wendbare hardtail mountainbike die de bergen efficiënt opklimt. Het frame is volledig opnieuw ontworpen met interne bekabeling en een fris design. Slechts één ding is hetzelfde gebleven; de fun om ermee te rijden!
+                </p>
+                <ul>
+                    <li>
+                        KATO AL
+                    </li>
+                    <li>
+                        SR SUNTOUR XCR RL AIR 100MM
+                    </li>
+                    <li>
+                        Shimano Deore RD-M4120 10-S
+                    </li>
 
-    <div class="container">
-    <h2>// SALES + OUTLET //</h2>
-    <article id="sales-bikes">
+                </ul>
 
-        <section>
-            <img src="assets/fiets3.png" height="270" width="400" alt="bike-3"/>
-            <h3 class="bike-sales">
-                NIRVANA TOUR
-            </h3>
-        </section>
-        <section>
-            <img src="assets/fiets4.png" height="270" width="400" alt="bike-4"/>
-            <h3 class="bike-sales">
-                LECTOR
-            </h3>
-        </section>
-        <section>
-            <img src="assets/fiets5.png" height="270" width="400" alt="bike-5"/>
-            <h3 class="bike-sales">
-                LECTOR SF
-            </h3>
-        </section>
-    </article>
-</div>
+            </div>
+            <img src="assets/fiets2.png" height="270" width="400" alt="bike-2"/>
+        </article>
+    </section>
+
+    <section class="main__section-sales--container">
+        <h1>// SALES + OUTLET //</h1>
+        <div>
+            <article>
+                <img src="assets/fiets3.png" height="270" width="400" alt="bike-3"/>
+                <h2 class="bike-sales">
+                    NIRVANA TOUR
+                </h2>
+            </article>
+
+            <article>
+                <img src="assets/fiets4.png" height="270" width="400" alt="bike-4"/>
+                <h2 class="bike-sales">
+                    LECTOR
+                </h2>
+            </article>
+
+            <article>
+                <img src="assets/fiets5.png" height="270" width="400" alt="bike-5"/>
+                <h2 class="bike-sales">
+                    LECTOR SF
+                </h2>
+            </article>
+        </div>
+
+    </section>
 </main>
 
-        <footer>
-            <div class="container">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2514.2382636010575!2d5.344780977102382!3d50.93780655215337!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c1217a07f78ae7%3A0xf11010a945af0f77!2sPXL%20A-Blok%20(Elfde-Linie)%2C%20Elfde-Liniestraat%2024%2C%203500%20Hasselt!5e0!3m2!1sen!2sbe!4v1700320052515!5m2!1sen!2sbe"
-                    width="400" height="300"
-                    style="border:0;" allowfullscreen=""
-                    loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
-            <div>
-                <h2 id="red">
-                    OFFROAD BIKE SHOP
-                </h2>
-                <p>Elfde-Liniestraat 24</p>
-                <p>3500 HASSELT</p>
-                <p>BELGIË</p>
-                <p>0452 / 63 51 42</p>
-                <p>011 / 32 65 87</p>
-                <p>info@offroad-bikes.be</p>
-            </div>
+<footer>
+    <div class="footer__container">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2514.238446380444!2d5.344780977009789!3d50.937803171689374!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c1217a07f78ae7%3A0xf11010a945af0f77!2sPXL%20A-Blok%20(Elfde-Linie)%2C%20Elfde-Liniestraat%2024%2C%203500%20Hasselt!5e0!3m2!1sen!2sbe!4v1701291695054!5m2!1sen!2sbe" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="footer__container-contact">
+            <h2>OFFROAD BIKE SHOP</h2>
+            <p>Elfde-Liniestraat 24</p>
+            <p>3500 HASSELT</p>
+            <p>BELGIË</p>
+            <p>0452 / 63 51 42</p>
+            <p>011 / 32 65 87</p>
+            <a href="mailto:info@offroad-bikes.be">info@offroad-bikes.be</a>
         </div>
-        </footer>
-
-
+    </div>
+</footer>
+<div id="top">
+    <a href="#go-top"><span class="material-symbols-outlined">arrow_upward</span></a>
+</div>
 </body>
 </html>
