--- a/index.html
+++ b/index.html
@@ -120,8 +120,10 @@
 
 <footer>
     <div class="footer__container">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2514.238446380444!2d5.344780977009789!3d50.937803171689374!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c1217a07f78ae7%3A0xf11010a945af0f77!2sPXL%20A-Blok%20(Elfde-Linie)%2C%20Elfde-Liniestraat%2024%2C%203500%20Hasselt!5e0!3m2!1sen!2sbe!4v1701291695054!5m2!1sen!2sbe" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        <div class="footer__container-contact">
+        <div class="footer__container-image">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2514.238446380444!2d5.344780977009789!3d50.937803171689374!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c1217a07f78ae7%3A0xf11010a945af0f77!2sPXL%20A-Blok%20(Elfde-Linie)%2C%20Elfde-Liniestraat%2024%2C%203500%20Hasselt!5e0!3m2!1sen!2sbe!4v1701291695054!5m2!1sen!2sbe" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+ <div class="footer__container-contact">
             <h2>OFFROAD BIKE SHOP</h2>
             <p>Elfde-Liniestraat 24</p>
             <p>3500 HASSELT</p>
